src/objects/Meeting_EVNT__c.object
<CustomObject>
    <description>Primary object to store meeting information.  Created on 9/27/2013 by KLorenti.</description>
    <fields>
        <fullName>Content_Approval_Needed_EVNT_MVN__c</fullName>
        <description>Will content need to be approved? Created 10/2/2013 by KLorenti</description>
        <label>Content Approval Needed?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Content_Creator_EVNT_MVN__c</fullName>
        <description>Who will be creating the content? Created 10/3/2013 by KLorenti.</description>
        <inlineHelpText>Who will be creating the content?</inlineHelpText>
        <label>Content Creator?</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Event_EVNT_MVN__c</fullName>
        <description>Date of Event. Created 10/2/2013 by KLorenti.</description>
        <label>Date of Event</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_to_Send_Invitations_EVNT_MVN__c</fullName>
        <description>Indicate date to send invitations. Created 10/2/2013 by KLorenti.</description>
        <label>Date to Send Invitations</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Time_of_Meeting_EVNT_MVN__c</fullName>
        <description>End Time of Meeting. Created 10/2/2013 by KLorenti.</description>
        <label>End Time of Meeting</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Country_EVNT_MVN__c</fullName>
        <description>Country of Event. Created 10/2/2013 by KLorenti.</description>
        <label>Event Country</label>
        <picklist>
            <picklistValues>
                <fullName>UK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>France</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Germany</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>External_Delegates_EVNT_MVN__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicate if External Delegates are to be surveyed? Created 10/2/2013 by KLorenti.</description>
        <label>External Delegates?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Internal_Delegates_EVNT_MVN__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicate if Internal Delegates are to be surveyed? Created 10/2/2013 by KLorenti.</description>
        <label>Internal Delegates?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Meeting_Owner_Sales_Rep_EVNT_MVN__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicate if Meeting Owners/Sales Reps are to be surveyed? Created 10/2/2013 by KLorenti.</description>
        <label>Meeting Owner/Sales Rep?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Break_Out_Rooms_EVNT_MVN__c</fullName>
        <description>Indicate number of Break Out rooms needed. Created 10/3/2013 by KLorenti.</description>
        <label>Number of Break Out Rooms</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Conference_Rooms_EVNT_MVN__c</fullName>
        <description>Indicate number of Conference rooms needed. Created 10/3/2013 by KLorenti.</description>
        <label>Number of Conference Rooms</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_Meeting_EVNT_MVN__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup Relationship to Meeting in order to select a Parent Meeting. Created 9/30/2013 by KLorenti.</description>
        <label>Parent Meeting</label>
        <referenceTo>Meeting_EVNT__c</referenceTo>
        <relationshipLabel>Meetings</relationshipLabel>
        <relationshipName>Meetings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Responses_Due_Date_EVNT_MVN__c</fullName>
        <description>Tracks date invitation responses are due. Created 10/2/2013 by KLorenti</description>
        <label>Responses Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Send_Save_the_Date_EVNT_MVN__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicate if a &quot;Save to Date&quot; should be sent to delegates?</description>
        <inlineHelpText>Do you want the ability to send a &quot;Save the Date&quot; to delegates?</inlineHelpText>
        <label>Send Save the Date?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Speaker_EVNT_MVN__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicate if Speakers are to be surveyed? Created 10/2/2013 by KLorenti.</description>
        <label>Speaker?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Time_of_Meeting_EVNT_MVN__c</fullName>
        <description>Start Time of Meeting. Created 10/2/2013 by KLorenti.</description>
        <label>Start Time of Meeting</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_for_Education__c</fullName>
        <description>Time for Education. Created 10/2/2013 by KLorenti.</description>
        <label>Time for Education</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_EVNT_MVN__c</fullName>
        <description>Type of Event. Created 10/2/2013 by KLorenti.</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Independent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Promotional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scientific Exchange</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Speaker Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investigator Meeting</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Venue_Preferred_Location_EVNT_MVN__c</fullName>
        <description>Indicate preferred Venue location</description>
        <label>Venue Preferred Location</label>
        <type>TextArea</type>
    </fields>
    <label>Meeting</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Meeting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Meetings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>